# figaroh-mirror

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  setup.py
src/figaroh/: __init__.py  cli.py  parameter.py  regression.py  trajectory.py
src/figaroh/calibration/: calibration_tools.py
src/figaroh/identification/: identification_tools.py
src/figaroh/tools/: regressor.py  robot.py
tests/: test_figaroh.py
