[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figaroh"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.8,<=3.12"
license = "Apache-2.0"

keywords = []

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pin>=3.4.0",
    "numdifftools",
    "quadprog",
    "numpy",
    "scipy",
    "picos",
    "pandas",
    "meshcat",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
