[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figaroh"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"

keywords = []

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pin>=3.4.0",
    "numdifftools",
    "numpy",
    "scipy",
    "pandas",
    "meshcat",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipdb",
]

[project.scripts]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
